apps/pingvin-share/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingvin-share
spec:
  selector:
    app: pingvin-share
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
