apps/pingvin-share/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingvin-share
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/configuration-snippet:
      proxy_set_header Accept-Encoding "";
      sub_filter '</head>' '<script src="https://rybbit.nasus.dev/api/script.js" data-site-id="7" defer></script></head>';
      sub_filter_once on;
      sub_filter_types text/html;
spec:
  ingressClassName: nginx
  rules:
    - host: files.nasus.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pingvin-share
                port:
                  name: http
  tls:
    - hosts:
        - files.nasus.dev
      secretName: pingvin-share-tls
